# tarsnap_update

./: .gitignore  list_filters.py  pyproject.toml  readme.md  tarsnap.service  tarsnap.target  tarsnap.timer  tarsnap_update  tarsnap_update.py
src/tarsnap_update/: __init__.py  __main__.py  backups.py  cli.py  list_filters.py
