[project]
authors = [{name = "Will Shanks", email = "wshaos@posteo.net"}]
dependencies = []
description = "Script for running and expiring tarsnap updates"
name = "tarsnap_update"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
tarsnap_update = "tarsnap_update.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tarsnap_update = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pylint = "*"

[tool.pixi.feature.test.tasks]
pylint = "pylint -v src"

[tool.pixi.environments]
test = ["test"]
